--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,11 @@
           </div>
 
           <nav>
+            <!-- 상단에 들어갈 메뉴를 작성 -->
             <a href="{{ site.baseurl }}/">블로그</a>
             <a href="{{ site.baseurl }}/about">개발자 이력</a>
+            <a href="{{ site.baseurl }}/ContactUs">Contact</a>
+            <a href="{{ site.baseurl }}/test">테스트 페이지</a>
           </nav>
         </header>
       </div>
